<resources>
    <string name="app_name">iNotes</string>
    <string name="folders_name">Folders</string>
    <string name="search_name">Search</string>
    <string name="main_btn">Add folder</string>
    <string name="empty_input">Input text</string>
    <string name="wrong_city">Wrong city inputted</string>
    <string name="create_note">Create note</string>
    <string name="title_activity_test1">TestActivity1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_notes_list">notes_list</string>
    <string name="back_button">back_button</string>
    <string name="please_input">Введіть назву нотатки</string>
    <string name="save">Зберегти</string>
    <string name="input_note_text">Введіть текст нотатки</string>
    <string name="description_add_new_note_button">add new note button</string>
    <string name="notes_name">Notes</string>
    <string name="to_delete_item">to delete item</string>
    <string name="delete_all">delete all</string>
    <string name="create_folder">створити папку</string>
    <string name="input_your_email">Введіть вашу пошту</string>
    <string name="project_name">iNotes</string>
    <string name="login_or_registration">Логін або реєстрація</string>
    <string name="input_email">Введіть пошту</string>
    <string name="input_password">Введіть пароль</string>
    <string name="log_out_from_account">log out from account</string>
    <string name="folders">Папки</string>
    <string name="search">Пошук</string>
    <string name="notes">Нотатки</string>
    <string name="delete">Видалити усе</string>
    <string name="restore_password">Відновити пароль</string>
</resources>