<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center_vertical"
    android:layout_marginBottom="150dp">

    <TextView
        android:id="@+id/project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/project_name"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_below="@id/project_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:gravity="center" />

    <Button
        android:id="@+id/login_or_register"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/login_or_registration"
        android:textColor="@color/appleYellow" />

    <Button
        android:id="@+id/restore_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_or_register"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/goodGray"
        android:text="@string/restore_password"
        android:textColor="@color/appleYellow" />

  </RelativeLayout>